# CodexWarden

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  schema-drift.yml
experimentation/: README.md  approval-probe.js  attach-desktop.js  codex-controller.js  daemon-client.js  demo-interrupt.js  interrupt-daemon.js  interrupt-desktop-live.js  list-threads.js  listen-all.js  package-lock.json  package.json  probe.js  shim-codex.js  shim-daemon.js  test-shim.js
experimentation/schema/: codex_app_server_protocol.v2.schemas.json
openspec/: config.yaml
openspec/changes/codex-control-daemon/: design.md  proposal.md  tasks.md
openspec/changes/codex-control-daemon/specs/action-control/: spec.md
openspec/changes/codex-control-daemon/specs/daemon-transport/: spec.md
openspec/changes/codex-control-daemon/specs/event-store/: spec.md
openspec/changes/codex-control-daemon/specs/event-streaming/: spec.md
openspec/changes/codex-control-daemon/specs/gui-supervisor/: spec.md
openspec/changes/codex-control-daemon/specs/library-api/: spec.md
openspec/changes/codex-control-daemon/specs/protocol-types/: spec.md
openspec/changes/codex-control-daemon/specs/thread-ingestion/: spec.md
scripts/: regenerate-schema.sh
src/control/: Cargo.toml
src/control/src/: lib.rs
src/core/: Cargo.toml
src/core/examples/: embedded.rs  live_complete.rs  live_e2e.rs  live_status_spike.rs
src/core/src/: lib.rs
src/ingest/: Cargo.toml
src/ingest/src/: lib.rs
src/protocol/: Cargo.toml  build.rs
src/protocol/schema/: control-wire.schema.json
src/protocol/schema/upstream/: codex_app_server_protocol.v2.schemas.json
src/protocol/src/: lib.rs
src/protocol/tests/fixtures/: recorded-inner-messages.ndjson
src/reducer/: Cargo.toml
src/reducer/src/: lib.rs
src/store/: Cargo.toml
src/store/src/: lib.rs
src/streaming/: Cargo.toml
src/streaming/src/: lib.rs
src/supervisor/: Cargo.toml
src/supervisor/src/: lib.rs
src/transport/: Cargo.toml
src/transport/src/: lib.rs  mock.rs
tooling/openspec/: package-lock.json  package.json
