[package]
name = "codex-control"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
control.workspace = true
futures-util.workspace = true
ingest.workspace = true
protocol.workspace = true
reducer.workspace = true
serde.workspace = true
serde_json.workspace = true
store.workspace = true
streaming.workspace = true
supervisor.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transport.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
