[package]
name = "ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
protocol.workspace = true
reducer.workspace = true
serde.workspace = true
serde_json.workspace = true
store.workspace = true
streaming.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
transport.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
