[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
quote = "1.0"
schemars = "0.8.22"
serde_json.workspace = true
typify = { version = "0.7", default-features = false }

[lints]
workspace = true
